--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,18 @@
 body {
   background-color: #1a1a1a;
   color: white;
+  text-align: center;
 }
-
-a {
-  color: white;
+h1 {
+  font-size: 48px;
+  margin-top: 100px;
+}
+.bouton {
+  display: inline-block;
+  padding: 20px 40px;
+  background-color: #ffffff;
+  color: black;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
 }
