--- a/pages/styles2.css
+++ b/pages/styles2.css
@@ -3,11 +3,11 @@ body {
   color: white;
   text-align: center;
 }
-h1 {
+h2 {
   font-size: 48px;
   margin-top: 100px;
 }
-.bouton {
+a.bouton {
   display: inline-block;
   padding: 20px 40px;
   background-color: #ffffff;
@@ -15,4 +15,8 @@ h1 {
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
+}
+h1 {
+  font-size: 48px;
+  margin-top: 100px;
 }
